syntax = "proto3";

package trivial;

message TrivialMessage {
  string trivial_field = 1;
}
